Add properties for icons in the `visual` part of list items

--- a/public/css/list/item-list.less
+++ b/public/css/list/item-list.less
@@ -27,8 +27,15 @@
 
     .visual {
       display: flex;
-      align-items: center;
-      flex-direction: column;
+      justify-content: center;
+
+      .icon {
+        font-size: 1.5em;
+
+        &:before {
+          margin-right: 0;
+        }
+      }
     }
 
     header {
