Adjust contact-list properties to match the icon properties in the `visual` part of list items

--- a/public/css/list/contact-list.less
+++ b/public/css/list/contact-list.less
@@ -1,18 +1,10 @@
 // Layout
 
-.item-list.contact-list {
-  .list-item {
-    & > .visual {
-      flex-direction: unset;
-    }
-  }
-}
-
 .contact-ball {
   .ball();
-  .ball-size-xl();
+  .ball-size-l();
   .ball-solid(@gray-semilight);
   font-weight: bold;
-  line-height: 1.75;
+  line-height: 1.2;
   text-transform: uppercase;
 }
