Add changes to `common.less`, `mixins.less` and `item-list.less`
mixins.less: Add line-clamp
common.less: Add severity classes
item-list.less: Add style for `.caption`

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -20,3 +20,19 @@
     margin: unset;
   }
 }
+
+.severity-crit {
+  color: @state-critical;
+}
+
+.severity-ok {
+  color: @state-ok;
+}
+
+.severity-err {
+  color: @state-unknown;
+}
+
+.severity-warning {
+  color: @state-warning;
+}
