--- a/public/css/list/list-item.less
+++ b/public/css/list/list-item.less
@@ -12,8 +12,11 @@
   }
 
   .title {
-    a {
+    .subject {
       color: @text-color;
+    }
+
+    a {
       font-weight: bold;
 
       &:hover {
