--- a/public/css/common.less
+++ b/public/css/common.less
@@ -7,3 +7,16 @@
     padding-right: 1em;
   }
 }
+
+.icon.source-icon {
+  background-color: @gray-light;
+  margin-right: 0.2em;
+  .ball();
+  .ball-size-l();
+
+  line-height: unset;
+
+  &:before {
+    margin: unset;
+  }
+}
