Add incident detail view
Add class `IncidentController`
Add class `IncidentDetail` and `IncidentContactList` and other related classes
Add less changes

Co-authored-by: Ravi Srinivasa <ravi.srinivasa@icinga.com>

--- a/public/css/list/contact-list.less
+++ b/public/css/list/contact-list.less
@@ -1,5 +1,23 @@
 // Layout
 
+.item-list.contact-list {
+  .list-item {
+    & > .visual {
+      flex-direction: unset;
+    }
+
+    &.minimal {
+      .main {
+        border: unset;
+      }
+
+      .visual {
+        width: unset;
+      }
+    }
+  }
+}
+
 .contact-ball {
   .ball();
   .ball-size-l();
