Use the new `SourceIcon` where applicable

--- a/public/css/event-source-badge.less
+++ b/public/css/event-source-badge.less
@@ -3,12 +3,6 @@
 
   .source-icon {
     position: absolute;
-    height: 2em;
-    width: 2em;
-
-    &:before {
-      transform: translate(0, 25%);
-    }
   }
 
   .name {
@@ -18,10 +12,10 @@
     border-bottom-right-radius: 1em;
     border-top-right-radius: 1em;
     z-index: -99;
-
-    .ball-solid(@gray);
-    padding-left: 1.5em;
-    padding-right: 0.5em;
+    padding: @ball-pad .5em @ball-pad 1.5em;
     margin-left: 1em;
+
+    background-color: @gray;
+    color: @text-color-inverted;
   }
 }
