--- a/public/css/list/item-list.less
+++ b/public/css/list/item-list.less
@@ -69,6 +69,32 @@
   }
 }
 
+.item-list.minimal {
+  > .empty-state {
+    padding: .25em;
+  }
+
+  .list-item {
+    header {
+      max-width: 100%;
+    }
+
+    .visual {
+      width: 2.2em;
+    }
+
+    .caption {
+      flex: 1 1 auto;
+      height: 1.5em;
+      margin-right: 1em;
+      width: 0;
+
+      .text-ellipsis();
+      .line-clamp("reset");
+    }
+  }
+}
+
 .item-list .list-item {
   .title {
     display: inline-flex;
