--- a/public/css/detail/incident-detail.less
+++ b/public/css/detail/incident-detail.less
@@ -10,4 +10,21 @@
       margin-right: 1em;
     }
   }
+
+  .incident-contact-list,
+  .incident-object-label-list {
+    .list-item {
+      &:not(:first-child) > .main {
+        border-top: 0;
+      }
+
+      .visual {
+        align-self: center;
+
+        i.icon {
+          font-size: 1em;
+        }
+      }
+    }
+  }
 }
