css: Show a small gap between a quick action's icon and label

--- a/public/css/quick-actions.less
+++ b/public/css/quick-actions.less
@@ -1,6 +1,12 @@
 .quick-actions {
   .control-button {
+    // These buttons also contain text, not just an icon
+
     display: inline-flex;
     align-items: baseline;
+
+    i.icon {
+      margin-right: .2em;
+    }
   }
 }
