EscalationConditionForm: Validate condition values

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -82,6 +82,14 @@
         padding: 0.5em;
         border: 1px solid @gray-lighter;
         border-radius: 0.5em;
+
+        .condition {
+          .errors {
+            width: auto;
+            margin: 0;
+          }
+        }
+
         .condition:not(:last-child) {
           margin-bottom: .4em;
 
