Add option remove button for each form's option and minor fixes

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -80,7 +80,9 @@
         padding: 0.5em;
         border: 1px solid @gray-lighter;
         border-radius: 0.5em;
-        .condition:not(:last-child) {
+        .options {
+          list-style-type: none;
+          padding: 0;
           margin-bottom: .4em;
 
           select, input {
