Controls: Make mode selection a tab control

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -1,5 +1,17 @@
 /* Layout */
 
+.calendar-controls {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  max-width: none;
+
+  .view-mode-switcher {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .calendar-grid {
   @days: 7;
 
