--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -18,20 +18,94 @@
   .header {
     display: grid;
     grid-gap: 1px;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
     grid-template-columns: repeat(@days, minmax(2em, 1fr));
 
     .column-title {
-      display: flex;
-      justify-content: space-between;
+      text-align: center;
     }
   }
 
-  .entry .title {
-    time,
-    .attendee {
-      margin-right: .5em;
+  .sidebar {
+    display: grid;
+
+    .row-title {
+      text-align: right;
+      padding-right: .5em;
+      font-size: .857em;
+
+      .hour,
+      .week-no {
+        display: block;
+        margin-top: -.75em;
+      }
     }
   }
+
+  .grid:after {
+    // Icinga Web has a rule that defines this. This disables it to make both grids overlay each other perfectly
+    content: none;
+  }
+
+  .grid,
+  .overlay {
+    grid-gap: 1px;
+    border: 1px solid transparent;
+  }
+
+  .step,
+  .entry {
+    > a {
+      display: block;
+      height: 100%;
+      overflow: hidden;
+    }
+  }
+
+  .entry {
+     .content {
+       display: flex;
+       flex-direction: column;
+       padding: .25em;
+       height: 100%;
+       max-height: 100%;
+     }
+
+     .title {
+       display: flex;
+       flex-wrap: wrap;
+       flex: 0 1 auto;
+       column-gap: .5em;
+       overflow: hidden;
+
+       time,
+       .attendee {
+         display: block;
+       }
+
+       .attendee {
+         word-break: break-all;
+       }
+
+       .attendee .icon {
+         vertical-align: baseline;
+       }
+     }
+
+     .description {
+       height: 0;
+       flex: 1 1 auto;
+       overflow: hidden;
+
+       p {
+         margin: 0;
+         overflow: hidden;
+         text-overflow: ellipsis;
+         .line-clamp(3);
+       }
+     }
+   }
 }
 
 .calendar-grid.month {
@@ -40,69 +114,25 @@
   @rowsPerDay: 5;
   @columnsPerDay: 48;
 
+  .sidebar {
+    grid-template-rows: repeat(@weeks, 1fr);
+  }
+
   .grid,
   .overlay {
     display: grid;
-    grid-template-rows: repeat(@weeks * @rowsPerDay, 100% / (@weeks * @rowsPerDay));
+    grid-template-rows: repeat(@weeks * @rowsPerDay, 1fr);
     grid-template-columns: repeat(@days * @columnsPerDay, minmax(0.125em, 1fr));
+    overflow: hidden;
   }
 
   .step {
     grid-row-end: span @rowsPerDay;
     grid-column-end: span @columnsPerDay;
 
-    border-width: 0;
-    &:nth-child(-n+7),
-    &:nth-child(n+8):nth-child(-n+14),
-    &:nth-child(n+15):nth-child(-n+21),
-    &:nth-child(n+22):nth-child(-n+28),
-    &:nth-child(n+29):nth-child(-n+35) {
-      border-top-width: 1px;
-      border-left-width: 1px;
-    }
-    &:nth-last-child(-n+7) {
-      border-top-width: 1px;
-      border-bottom-width: 1px;
-      border-left-width: 1px;
-    }
-    &:nth-child(7),
-    &:nth-child(14),
-    &:nth-child(21),
-    &:nth-child(28),
-    &:nth-child(35),
-    &:last-child {
-      border-right-width: 1px;
-    }
-
-    &::before {
-      // Responsible for maintaining an intrinsic 1 / 1 aspect ratio
-      content: "";
-      padding-bottom: 100%;
-      display: block;
-    }
-
-    &::before {
-      grid-area: ~"1 / 1 / 2 / 2";
-    }
-  }
-
-  .entry {
-    margin-top: 1px;
-
-    &[data-row-end="31"] {
-      margin-bottom: 1px;
-    }
-    &[data-col-end="337"] {
-      margin-right: 1px;
-    }
-    &[data-col-start="1"],
-    &[data-col-start="49"],
-    &[data-col-start="97"] ,
-    &[data-col-start="145"] ,
-    &[data-col-start="193"] ,
-    &[data-col-start="241"] ,
-    &[data-col-start="289"]  {
-      margin-left: 1px;
+    > a {
+      text-align: right;
+      padding-right: .25em;
     }
   }
 }
@@ -114,63 +144,32 @@
   @columnsPerDay: 4;
 
   .sidebar {
-    display: grid;
     grid-template-rows: repeat(@hours, 1fr);
-
-    .row-title {
-      display: flex;
-      flex-direction: column;
-
-      .hour {
-        align-self: flex-end;
-      }
-    }
   }
 
   .grid,
   .overlay {
     display: grid;
-    grid-gap: 0 1px;
-    grid-template-rows: repeat(@hours * @rowsPerHour, 4em);
+    grid-template-rows: repeat(@hours * @rowsPerHour, 1fr);
     grid-template-columns: repeat(@days * @columnsPerDay, minmax(2em, 1fr));
+  }
+
+  .grid,
+  .overlay {
+    border-left: none;
   }
 
   .step {
     grid-column-end: span @columnsPerDay;
     grid-row-end: span @rowsPerHour;
-
-    border-width: 0;
-    &:nth-child(-n+7) {
-      border-width: 1px 1px 0 1px;
-    }
-    &:nth-child(n + 8):nth-child(-n + 161) {
-      border-width: 0 1px 0 1px;
-    }
-    &:nth-last-child(-n+7) {
-      border-width: 0 1px 1px 1px;
-    }
-  }
-
-  .entry {
-    &.single,
-    &.outer-left {
-      margin-left: 1px;
-    }
-
-    &.single,
-    &.outer-right {
-      margin-right: 1px;
-    }
   }
 }
 
 .calendar-grid {
   display: grid;
 
-  &.week {
-    grid-template-columns: 6em auto;
-    grid-template-rows: 1.5em auto;
-
+  &.week,
+  &.month {
     .header {
       grid-area: ~"1 / 2 / 2 / 3";
     }
@@ -184,17 +183,14 @@
       grid-area: ~"2 / 2 / 3 / 3";
     }
   }
+
+  &.week {
+    grid-template-columns: 6em auto;
+    grid-template-rows: 2.5em auto;
+  }
   &.month {
+    grid-template-columns: 4em auto;
     grid-template-rows: 1.5em auto;
-
-    .header {
-      grid-area: ~"1 / 1 / 2 / 2";
-    }
-
-    .grid,
-    .overlay {
-      grid-area: ~"2 / 1 / 3 / 2";
-    }
   }
 
   .overlay {
@@ -208,32 +204,81 @@
 
 /* Design */
 
+.calendar-controls {
+  input[type="month"],
+  input[type="week"] {
+    background-color: @low-sat-blue;
+  }
+}
+
 .calendar {
-  .step {
-    border-style: solid;
-    border-color: black;
+  .calendar-title {
+    font-size: 1.5em;
+    font-weight: normal;
   }
 
-  .title {
-    font-weight: bold;
-    color: @text-color-inverted;
+  .grid {
+    background-color: @gray-lighter;
+    border-color: @gray-lighter;
+  }
 
-    time {
-      font-weight: normal;
+  .step {
+    background-color: @body-bg-color;
+    color: @text-color-light;
+  }
+
+  .step,
+  .entry {
+    > a {
+      text-decoration: none;
     }
   }
 
   .entry {
-    background: red;
+    border-width: 1px;
+    border-style: solid;
+    .rounded-corners();
+
+    a:hover {
+      opacity: .6;
+    }
+
+    .title {
+      font-weight: bold;
+      color: @text-color;
+      mix-blend-mode: screen;
+      opacity: .75;
+
+      time {
+        font-weight: normal;
+      }
+
+      .attendee .icon {
+        font-size: .75em;
+        opacity: .8;
+      }
+    }
   }
 
   .column-title {
     .day-name {
-
+      color: @text-color-light;
+      text-transform: uppercase;
     }
 
     .day-number {
-
+      font-weight: bold;
+      font-size: 1.5em;
     }
   }
+
+  .row-title {
+    color: @text-color-light;
+  }
 }
+
+@light-mode: {
+  .calendar .entry .title {
+    mix-blend-mode: multiply;
+  }
+};
