--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -20,15 +20,39 @@
   }
 }
 
-.schedule-container {
+.schedule {
   display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  .schedule-header {
+    margin-bottom: 1em;
+  }
+}
+
+.schedule-container {
+  flex: 1 1 auto;
+  display: flex;
+  overflow: hidden;
 
   .calendar {
     flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+
+    .calendar-grid {
+      flex: 1 1 auto;
+      height: 0;
+    }
   }
 
   .event-form:not(:empty) {
     flex: 1 1 auto;
     min-width: 30%;
+    padding-left: 1em;
+
+    .icinga-form {
+      width: 100%;
+    }
   }
 }
