Include hidden element for id and default channel type option in recipient form

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -114,6 +114,10 @@
             }
           }
 
+          .default-channel {
+            color: @base-disabled;
+          }
+
           select, input {
             min-width: 13em;
             text-align: center;
