--- a/public/css/common.less
+++ b/public/css/common.less
@@ -6,6 +6,10 @@
     padding-left: 1em;
     padding-right: 1em;
   }
+
+  .item-list > .empty-state {
+    margin: 0 1em;
+  }
 }
 
 .controls {
@@ -15,6 +19,11 @@
     flex-shrink: 0;
     z-index: 1; // The content may clip, this ensures the separator is always visible
     height: 8em; //TODO(sd): add dynamic fix for noma
+  }
+
+  &.event-rule-detail {
+    display: block;
+    .box-shadow(0, 0, 0, 1px, @gray-lighter);
   }
 }
 
@@ -146,22 +155,23 @@
   button[type="submit"] {
     font-size: 3em;
     height: 2.25em;
-    color: @text-color;
-    border: 1px dotted @text-color;
+    color: @icinga-blue;
     margin: 0;
+    background: @low-sat-blue;
+    border: none;
   }
 
   button[type="submit"]:hover {
-    background-color: transparent;
+    background: @low-sat-blue-dark;
     color: @icinga-blue;
   }
 }
 
 .add-filter-form:after {
   content: 'Filter';
-  margin-bottom: -2em;
-  margin-left: -6em;
-  align-self: self-end;
+  width: 100%;
+  text-align: center;
+  margin-bottom: -1.5em;
 }
 
 .horizontal-line-long {
@@ -176,8 +186,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  border-bottom: 1px solid @gray-lighter;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.75em;
 
   .event-rule-form {
     display: inline-flex;
