Disable remove escalation buttons for escalations with active incidents

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -97,6 +97,13 @@
 
 .remove-escalation-form {
   width: fit-content;
+  cursor: default;
+
+  button[disabled] {
+    background: @gray-light;
+    color: @disabled-gray;
+    border: none;
+  }
 }
 
 #layout.minimal-layout form.icinga-form:not(.inline).remove-escalation-form:not(.inline),
