--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -195,3 +195,11 @@
     margin-left: -0.1em;
   }
 }
+
+.cache-notice {
+  margin: 0 1em;
+  padding: 1em;
+  background-color: @gray-lighter;
+  text-align: center;
+  .rounded-corners();
+}
