--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -3,12 +3,17 @@
 .calendar-controls {
   display: flex;
   justify-content: flex-start;
-  align-items: baseline;
   max-width: none;
 
   .view-mode-switcher {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
+
+    label {
+      min-width: 6em;
+      text-align: center;
+    }
   }
 }
 
@@ -208,6 +213,11 @@
   input[type="month"],
   input[type="week"] {
     background-color: @low-sat-blue;
+  }
+
+  .view-mode-switcher label {
+    padding: .5em;
+    line-height: normal;
   }
 }
 
