calendar.less: Decrease sidebar labels

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -38,11 +38,14 @@
     .row-title {
       text-align: right;
       padding-right: .5em;
-      font-size: .857em;
 
       .hour,
       .week-no {
         display: block;
+      }
+
+      .hour {
+        font-size: .857em;
         margin-top: -.75em;
       }
     }
