--- a/public/css/common.less
+++ b/public/css/common.less
@@ -220,6 +220,12 @@
       }
 
       &.btn-remove {
+        &:disabled {
+          background: none;
+          color: @gray;
+          opacity: 0.5;
+        }
+
         border: none;
       }
 
