Fix minor bugs in `EscalationRecipientForm`
Create relevant relations in `Schedule`, `ContactGroup` and `RuleEscalationRecipient`. And show
default channel type only for contacts.

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -115,7 +115,7 @@
           }
 
           .default-channel {
-            color: @base-disabled;
+            color: @disabled-gray;
           }
 
           select, input {
