--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -72,9 +72,12 @@
   }
 
   .entry {
+    overflow: hidden;
+
      .content {
        display: flex;
-       flex-direction: column;
+       flex-wrap: wrap;
+       column-gap: .5em;
        padding: .125em;
        height: 100%;
        max-height: 100%;
@@ -87,13 +90,12 @@
        column-gap: .5em;
        overflow: hidden;
 
-       time,
-       .attendee {
-         display: block;
+       time {
+         margin-right: .5em;
        }
 
        .attendee {
-         word-break: break-all;
+         word-break: break-word;
        }
 
        .attendee .icon {
@@ -102,7 +104,6 @@
      }
 
      .description {
-       height: 0;
        flex: 1 1 auto;
        overflow: hidden;
 
