Use `@search-term-color` for filter input

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -28,7 +28,7 @@
     input.filter-input {
       width: 20em;
       background-color: @search-term-bg;
-      color: @text-color-inverted;
+      color: @search-term-color;
     }
   }
 
